src/renderer/assets/css/main.css
@import "./dark.css";

.custom-bg-header {
    background: #fafafa;
}

.limiter-input {
    width: 100px !important;
}

.limiter-input-extended {
    width: 250px !important;
}

.limiter-input-extended, .limiter-input {
    height: 25px;
}

.m-l-r-10 {
    margin: 0 10px;
}

.m-5 {
    margin: 5px !important;
}

.label-standart-15 {
    min-width: 15px;
}

.label-standart-20 {
    min-width: 20px;
}

.label-standart-20, .label-standart-15 {
    width: auto;
}

.list {
    display: flex;
    flex-direction: column;
    justify-content: space-around;
    background: white;
    height: 140px;
    width: 100%;
    overflow-y: scroll;
}

.list .experiment {
    cursor: pointer;
}

.like-table li, .like-table-n li {
    list-style: none !important;
    width: auto;
    border: 1px solid #eee;
}

.exp-table {
    width: 200px;
    height: 130px;
    overflow-y: scroll;
    margin-bottom: 0;
}

.exp-table li {
    width: 182px;
    list-style: none !important;
    margin: 5px 0;
    text-align: left;
}

.like-table {
    width: 120px;
}

.like-table-n {
    width: 50px;
}

.like-table-n, .like-table, .exp-table {
    padding: 0;
}

.general-ul-container {
    height: 420px;
    overflow-y: scroll;
}

/*.checkbox-class {*/
/*margin: 2px 0;*/
/*}*/

